Fixed calendar alignment

--- a/index.css
+++ b/index.css
@@ -242,10 +242,6 @@ img.fire-anim {
     transform: scale(1.1);
 }
 
-.ui.grid {
-  text-align: center !important;
-}
-
 
 
 @-webkit-keyframes AnimationName {
